# Quaternion-Cplusplus

./: .gitignore  CMakeLists.txt  README.md
docs/: Lie group & Lie algebra.ipynb  quaternion.ipynb
include/: quaternion.h
src/: main.cpp  quaternion.cpp  quaternion.hpp
